--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Сложно сосредоточиться</title>
     <link rel="icon" type="svg" href="./images/favicon.svg">
+    <link rel="apple-touch-icon" href="./images/mobile-icon.png">
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles/globals.css">
     <link rel="stylesheet" href="styles/variables.css">
     <link rel="stylesheet" href="./styles/style.css">
@@ -18,7 +20,7 @@
     <link rel="stylesheet" href="./styles/variables.css">
 </head>
 <body class="page">
-<header class="header decorated-zone">
+<header class="header decorated-zone ">
     <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
             <li class="header__theme-menu-item">
@@ -44,7 +46,7 @@
                 </button>
             </li>
         </ul>
-        <div class="header-decoration">REC</div>
+        <span class="header-decoration">REC</span>
     </nav>
     <h1 class="header_title">no focus</h1>
     <div class="header_description">
@@ -53,7 +55,7 @@
     </div>
 </header>
 <main>
-    <div class="main__description">
+    <section class="main__description">
         <h2 class="main__description_title">Почему сосредоточиться так сложно</h2>
         <div class="main__description_block">
             <h3 class="main__description_block-title">Многозадачность</h3>
@@ -75,24 +77,24 @@
                 чувствуем удовольствие. Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия
                 получаешь.</p>
         </div>
-    </div>
-    <div class="main__description_second">
-        <h2 class="main__description_title main__description_title-second">Что снижает концентрацию внимания?</h2>
-        <div class="main__description_block-second">
+    </section>
+    <section class="main__description_concentration">
+        <h2 class="main__description_title main__description_title-concentration">Что снижает концентрацию внимания?</h2>
+        <div class="main__description_block-concentration">
             <h3 class="main__description_block-title">Многозадачность</h3>
             <p class="main__description_block-text">Как концентрация может снижаться из-за… концентрации? Любая
                 стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать»
                 окружающую среду на предмет опасности. Например, читать новости вместо работы. Но быть собранными всё
                 время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.</p>
         </div>
-        <div class="main__description_block-second">
+        <div class="main__description_block-concentration">
             <h3 class="main__description_block-title">Еда</h3>
             <p class="main__description_block-text">«Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
                 доставляют в мозг энергию и помогают ему лучше работать. Но уходит эта энергия также быстро, как и
                 приходит. А мы в результате попадаем на «углеводные качели»: как только действие «быстрых углеводов»
                 заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.</p>
         </div>
-        <div class="main__description_block-second">
+        <div class="main__description_block-concentration">
             <h3 class="main__description_block-title">Гаджеты</h3>
             <p class="main__description_block-text">Да-да, это та самая ситуация, когда на экране ноутбука — код, в
                 наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается
@@ -100,16 +102,16 @@
                 концентрации, человеку в среднем нужно 20 минут. Вот и получается, что чем больше времени мы проводим в
                 гаджетах, тем больше времени затем нужно, чтобы вернуться к работе.</p>
         </div>
-    </div>
-    <div class="main__description_third">
-        <h2 class="main__description_title main__description_title-third">Как концентрироваться лучше, чем золотая рыбка
+    </section>
+    <section class="main__description_methods">
+        <h2 class="main__description_title main__description_title-methods">Как концентрироваться лучше, чем золотая рыбка
             (то есть дольше трёх
             секунд)</h2>
-        <div class="main__description_block-thirdEmpty">
+        <div class="main__description_block-methodsEmpty">
             <h3 class="main__description_block-title">5 простых (на самом деле не очень) советов</h3>
         </div>
-        <div class="main__description_block-third">
-            <h3 class="main__description_block-title main__description_block_title-third">Представьте небо и облака</h3>
+        <div class="main__description_block-methods">
+            <h4 class="main__description_block-title main__description_block_title-methods">Представьте небо и облака</h4>
             <p class="main__description_block-text">Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
                 успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи
                 делать. В такие моменты можно закрыть глаза и представить, что чистое небо — это вы, а облака —
@@ -117,14 +119,14 @@
                 денется. Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах
                 из будущего.</p>
         </div>
-        <div class="main__description_block-third">
-            <h3 class="main__description_block-title main__description_block_title-third">Включите музыку</h3>
+        <div class="main__description_block-methods">
+            <h3 class="main__description_block-title main__description_block_title-methods">Включите музыку</h3>
             <p class="main__description_block-text">Но не любую, и не любимую. Любимая может быть связана с сильными
                 положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная,
                 умеренно-ритмичная. Можно вообще попробовать включить плейлист в «белым шумом» или нейромузыкой.</p>
         </div>
-        <div class="main__description_block-third">
-            <h3 class="main__description_block-title main__description_block_title-third">Прогуляйтесь</h3>
+        <div class="main__description_block-methods">
+            <h3 class="main__description_block-title main__description_block_title-methods">Прогуляйтесь</h3>
             <p class="main__description_block-text">Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
                 <a href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
                    class="link">показал</a>, что созерцание природы повышает концентрацию, в то время как после
@@ -133,51 +135,51 @@
                 поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже
                 отличный вариант.</p>
         </div>
-        <div class="main__description_block-third">
-            <h3 class="main__description_block-title main__description_block_title-third">Хорошо ешьте</h3>
+        <div class="main__description_block-methods">
+            <h3 class="main__description_block-title main__description_block_title-methods">Хорошо ешьте</h3>
             <p class="main__description_block-text">Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
                 которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи,
                 ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.</p>
         </div>
-        <div class="main__description_block-third">
-            <h3 class="main__description_block-title main__description_block_title-third">Читайте</h3>
+        <div class="main__description_block-methods">
+            <h3 class="main__description_block-title main__description_block_title-methods">Читайте</h3>
             <p class="main__description_block-text">Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы
                 прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна
                 затянуть и на несколько часов и круто тренирует направленное внимание.</p>
         </div>
-    </div>
-    <div class="main__description_block-last">
+    </section>
+    <section class="main__description_block-images">
         <h3 class="main__description_block-title">А можно в картинках?</h3>
-    </div>
-    <div class="main__description_last">
-        <div class="main__description_image-sunset">
-            <img src="images/sunset.png"
-                 class="img"
-                 alt="Рассвет">
+        <div class="main__description_images">
+            <div class="main__description_image-sunset">
+                <img src="images/sunset.png"
+                     class="img"
+                     alt="Рассвет">
+            </div>
+            <div class="main__description_image-ice-cream">
+                <img src="images/ice-cream.png"
+                     alt="Мороженое"
+                     class="img">
+            </div>
+            <div class="main__description_image-tape">
+                <img src="images/tape.png"
+                     alt="Кассета"
+                     class="img">
+            </div>
+            <div class="main__description_image-books">
+                <img src="images/books.png"
+                     alt="Книги"
+                     class="img">
+            </div>
+            <div class="main__description_image-street">
+                <img src="images/street.png"
+                     alt="Улица"
+                     class="img">
+            </div>
         </div>
-        <div class="main__description_image-ice-cream">
-            <img src="images/ice-cream.png"
-                 alt="Мороженое"
-                 class="img">
-        </div>
-        <div class="main__description_image-tape">
-            <img src="images/tape.png"
-                 alt="Кассета"
-                 class="img">
-        </div>
-        <div class="main__description_image-books">
-            <img src="images/books.png"
-                 alt="Книги"
-                 class="img">
-        </div>
-        <div class="main__description_image-street">
-            <img src="images/street.png"
-                 alt="Улица"
-                 class="img">
-        </div>
-    </div>
+    </section>
 </main>
-<footer class="footer">
+<footer class="footer decorated-zone">
     <h2 class="footer_title">focus</h2>
 </footer>
 <script src="./scripts/script.js"></script>
