--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Сложно сосредоточиться</title>
-    <link rel="icon" type="svg" href="./images/favicon.svg">
+    <link rel="icon" type="image/svg+xml" href="./images/favicon.svg">
     <link rel="apple-touch-icon" href="./images/mobile-icon.png">
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="fonts/fonts.css">
     <link rel="stylesheet" href="styles/globals.css">
     <link rel="stylesheet" href="styles/variables.css">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/dark.css">
     <link rel="stylesheet" href="./styles/light.css">
-    <link rel="stylesheet" href="fonts/fonts.css">
     <meta name="color-scheme" content="light dark">
 
     <link rel="stylesheet" href="./styles/variables.css">
@@ -120,13 +120,13 @@
                 из будущего.</p>
         </div>
         <div class="main__description_block-methods">
-            <h3 class="main__description_block-title main__description_block_title-methods">Включите музыку</h3>
+            <h4 class="main__description_block-title main__description_block_title-methods">Включите музыку</h4>
             <p class="main__description_block-text">Но не любую, и не любимую. Любимая может быть связана с сильными
                 положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная,
                 умеренно-ритмичная. Можно вообще попробовать включить плейлист в «белым шумом» или нейромузыкой.</p>
         </div>
         <div class="main__description_block-methods">
-            <h3 class="main__description_block-title main__description_block_title-methods">Прогуляйтесь</h3>
+            <h4 class="main__description_block-title main__description_block_title-methods">Прогуляйтесь</h4>
             <p class="main__description_block-text">Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
                 <a href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
                    class="link">показал</a>, что созерцание природы повышает концентрацию, в то время как после
@@ -136,13 +136,13 @@
                 отличный вариант.</p>
         </div>
         <div class="main__description_block-methods">
-            <h3 class="main__description_block-title main__description_block_title-methods">Хорошо ешьте</h3>
+            <h4 class="main__description_block-title main__description_block_title-methods">Хорошо ешьте</h4>
             <p class="main__description_block-text">Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
                 которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи,
                 ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.</p>
         </div>
         <div class="main__description_block-methods">
-            <h3 class="main__description_block-title main__description_block_title-methods">Читайте</h3>
+            <h4 class="main__description_block-title main__description_block_title-methods">Читайте</h4>
             <p class="main__description_block-text">Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы
                 прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна
                 затянуть и на несколько часов и круто тренирует направленное внимание.</p>
